# SentStockPredi

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  stock_predictor.db
.cache/: cache.db-shm  cache.db-wal
frontend/stock-ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/stock-ui/src/: App.jsx  api.js  index.css
frontend/stock-ui/src/components/: HeadlinesTable.jsx  LoadingSpinner.jsx  SentimentBadge.jsx  StockChart.jsx
notebooks/: exploratory.ipynb
src/: data_pipeline.py  forecasting.py  main.py  sentiment_analysis.py  utils.py
src/api/v1/: routes.py
src/api/v1/endpoints/: data.py  forecast.py  headlines.py  sentiment.py
src/core/: auth.py  cache.py  config.py  logger.py  rate_limit.py
src/db/: storage.py
src/models/: db_models.py  schemas.py
src/services/: data_fetcher.py  news_fetcher.py  prophet_trainer.py  sentiment_analyzer.py
src/utils/: helpers.py
tests/: test_endpoints.py  test_services.py
